--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="row">
                       <div class="buttons padd-15">
                         <a
-                          href="https://drive.google.com/file/d/14mGvSF5a3dbZJGEj0NNIRYT_KDNJLOlN/view?usp=sharing"
+                          href="https://drive.google.com/file/d/1KSMCg3XbWoPvC59LkZPBJpLIGzetqQYQ/view?usp=sharing"
                           class="btn"
                           >Download Resume</a
                         >
@@ -218,7 +218,7 @@
                             <h4 class="timeline-title">Android Development</h4>
                             <p class="timeline-text">
                               Android Studio<br />
-                              Java, XML
+                              Java, XML, React Native
                             </p>
                           </div>
                           <div class="timeline-item">
@@ -250,6 +250,20 @@
               </div>
             </div>
             <div class="row">
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-street-view"></i></div>
+                  <h4>Ethos Way</h4>
+                  <p>
+                    A native app where user signs up and list of all his
+                    contacts appear on the screen. The user needs to select 5
+                    contacts with whom he will share his location. In case of
+                    emergency, the user can share his location by just clicking
+                    a button. A notification is sent to all the registered
+                    user's contacts. There is also a list of emergency numbers.
+                  </p>
+                </div>
+              </div>
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-laptop"></i></div>
