--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                       <span>Web and Android Developer</span>
                     </h3>
                     <p>
-                      I'm very passionate and dedicated to my work. I have
+                      I'm very passionate and dedicated towards my work. I have
                       acquired the skills and knowledge necessary to make
                       project a success. I enjoy every step, from discussion and
                       collaboration.
@@ -252,6 +252,16 @@
             <div class="row">
               <div class="service-item padd-15">
                 <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-area-chart"></i></div>
+                  <h4>Mesons</h4>
+                  <p>
+                    A cross-platform website where user can compare their leetcode, codeforces and codechef profiles together and with other users. Friends can give challenges to others for which coins are gained upon completion and ranks are decided.
+                    An extension by which user can put questions of above platforms in their todo list which appears on website.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-street-view"></i></div>
                   <h4>Ethos Way</h4>
                   <p>
@@ -319,20 +329,6 @@
                     outstretched hand. These shapes are "rock" (a closed fist)
                     "paper" (a flat hand) "scissors" (a fist with the index
                     finger and middle finger extended, forming a V).
-                  </p>
-                </div>
-              </div>
-              <div class="service-item padd-15">
-                <div class="service-item-inner">
-                  <div class="icon"><i class="fa fa-calculator"></i></div>
-                  <h4>Calculator</h4>
-                  <p>
-                    A simple calculator that follows the design of the
-                    calculator present in our cell phones. It can perform basic
-                    calculations like addition, subtraction, multiplication and
-                    division. also it can perform decimal operations. You can
-                    also use brackets in the mathematical operations you want to
-                    perform.
                   </p>
                 </div>
               </div>
