--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <h4 class="timeline-title">Others</h4>
                             <p class="timeline-text">
                               C, C++, Java<br />
-                              MySQL
+                              MySQL, MongoDB
                             </p>
                           </div>
                         </div>
@@ -250,7 +250,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="service-item padd-15">
+              <div onclick="mesons()" class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-area-chart"></i></div>
                   <h4>Mesons</h4>
@@ -260,7 +260,7 @@
                   </p>
                 </div>
               </div>
-              <div class="service-item padd-15">
+              <div onclick="ethosway()" class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-street-view"></i></div>
                   <h4>Ethos Way</h4>
@@ -274,7 +274,7 @@
                   </p>
                 </div>
               </div>
-              <div class="service-item padd-15">
+              <div onclick="trackme()" class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-laptop"></i></div>
                   <h4>Track Me</h4>
@@ -289,7 +289,7 @@
                   </p>
                 </div>
               </div>
-              <div class="service-item padd-15">
+              <div onclick="innovadia()" class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-photo"></i></div>
                   <h4>Innovadia</h4>
@@ -302,7 +302,7 @@
                   </p>
                 </div>
               </div>
-              <div class="service-item padd-15">
+              <div onclick="quiz()" class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-question"></i></div>
                   <h4>Quiz</h4>
@@ -318,7 +318,7 @@
                   </p>
                 </div>
               </div>
-              <div class="service-item padd-15">
+              <div onclick="rps()" class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-rocket"></i></div>
                   <h4>Rock-Paper-Scissor</h4>
